objects/Appointment__c.object
<CustomObject>
    <description>Stores the details of the appointment between a physician and a patient</description>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Stores end time of the appointment</description>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patient_Email_Id__c</fullName>
        <formula>Patient__r.PersonContact.Email</formula>
        <label>Patient&apos; Email Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>Stores the patient with whom the appointment is scheduled</description>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the physician with whom the appointment is scheduled</description>
        <label>Physician</label>
        <referenceTo>Physician_Specialization__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physician_s_Name__c</fullName>
        <formula>Physician__r.Physician__r.FirstName + &apos; &apos; + Physician__r.Physician__r.LastName</formula>
        <label>Physician&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Stores the start date and time of the appointment</description>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stores the appointment status</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appointment</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>